fix menu (clear commend)